--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^30.0.6"
+    "electron": "^30.0.6",
+    "flowbite-react": "^0.9.0",
+    "python": "^0.0.4",
+    "react-pdf": "^8.0.2"
   },
   "devDependencies": {
     "electron-reload": "^2.0.0-alpha.1"
