--- a/gazeProReact/package.json
+++ b/gazeProReact/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-pdf": "^8.0.2",
     "tailwindcss": "^3.4.3"
   },
