--- a/gazeProReact/package.json
+++ b/gazeProReact/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-pdf": "^8.0.2",
+    "reactjs-popup": "^2.0.6",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
