--- a/gazeProReact/tsconfig.json
+++ b/gazeProReact/tsconfig.json
@@ -15,12 +15,13 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "strict": false, // Disable strict mode
+    "noImplicitAny": false,  // Disable noImplicitAny
+    "noUnusedLocals": false,  // Disable noUnusedLocals
+    "noUnusedParameters": false,   // Disable noUnusedParameters
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
+  "include": ["src", "src/electron.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
