--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "NODE_ENV=development electron .",
+    "package": "NODE_ENV=production electron-builder"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^30.0.6",
     "flowbite-react": "^0.9.0",
     "python": "^0.0.4",
     "react-pdf": "^8.0.2"
   },
   "devDependencies": {
+    "electron": "^30.0.6",
+    "electron-builder": "^25.0.0-alpha.9",
     "electron-reload": "^2.0.0-alpha.1"
   }
 }
