--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=development electron .",
     "package": "NODE_ENV=production electron-builder --mac",
-    "package:windows": "NODE_ENV=production electron-builder --windows"
+    "package:windows": "NODE_ENV=production electron-builder --windows --x64"
   },
   "keywords": [],
   "author": "",
