--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development electron .",
+    "start": "cross-env NODE_ENV=development electron .",
     "package": "NODE_ENV=production electron-builder --mac",
     "package:windows": "NODE_ENV=production electron-builder --windows --x64"
   },
@@ -18,6 +18,7 @@
     "react-pdf": "^8.0.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "electron": "^30.0.6",
     "electron-builder": "^25.0.0-alpha.9",
     "electron-reload": "^2.0.0-alpha.1"
